# dongley

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  README.md  dongley.cpp  idf_component.yml
sdlmain/: CMakePresets.json
src/: alarm_clock.cpp  alarm_clock.hpp
src/hal/: board.hpp
src/network/: README.md
